# pymeteobridge

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_all.txt  requirements_test.txt  setup.cfg  tox.ini
.github/workflows/: bump-version.yml  release.yml
pymeteobridge/: __init__.py  api.py  const.py  data.py  exceptions.py  helpers.py
pymeteobridgedata/: __init__.py  api.py  const.py  conversion.py  data.py  helpers.py
tests/: const.py  test_swversion_string.py
