[metadata]
name = pymeteobridge
version = 0.1.0
description = Python Wrapper to communicate with a Meteobridge Weather Data Logger
long_description = file: README.md
author = Bjarne Riis
author_email = bjarne@briis.com
url = https://github.com/briis/pymeteobridge
license = MIT
keywords = Meteobridge, Weather, pws, personal-weather-station Python
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    aiohttp

