[metadata]
name = pymeteobridgedata
version = 0.1.21
description = Python Wrapper to communicate with a Meteobridge Weather Data Logger
long_description = file: README.md
long_description_content_type = text/markdown
author = Bjarne Riis
author_email = bjarne@briis.com
maintainer = Giuliano Favro (IU1JVO)
maintainer_email = iu1jvo@gmail.com
url = https://github.com/iu1jvo/pymeteobridge
license = MIT
keywords = Meteobridge, Weather, pws, personal-weather-station Python
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14

[options]
packages = find:
install_requires =
    aiohttp
    python-aqi

[options.extras_require]
dev =
    base36
    black
    build
    coverage[toml]
    flake8
    flake8-docstrings
    ipython
    mypy
    pip-tools
    pydocstyle
    pylint
    pylint_strict_informational
    pyproject-flake8
    pytest
    pytest-asyncio
    pytest-cov
    pytest-sugar
    pytest-timeout>=1.2.1
    termcolor
    tox
    types-pillow
    types-pytz
    types-termcolor
shell=
    ipython
    termcolor
